k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: static-svc
  namespace: static
spec:
  selector:
    app: static
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
